# keypoint-detection

./: .gitignore  README.md  details.md  heatmap_config.json  inference.ipynb  inference.py  main.py  pyproject.toml  resnet_config.json  test.py  test_fp16.py  test_video_inf.py  trainer.py
.github/workflows/: tests.yml
config/: __init__.py  config.py  model_configs.py  utils.py
examples/notebooks/: convert_onnx.ipynb  speed_comparison.py
models/: __init__.py  keypoint_rcnn.py  resnet.py
src/core/: __init__.py  dataset.py  metrics.py
src/heatmap/: __init__.py  heatmap_funcs.py
src/inference/: __Init__.py  __init__.py  inference.py  processing.py  video_processor.py
src/models/: heatmap.py  keypoint_rcnn.py  resnet.py
src/trainer/: __init__.py  convert_onnx.py  trainer.py
src/utils/: __init__.py  heatmap_funcs.py  processing.py  utils.py
tests/: README.md  test_heatmap.py  test_metrics.py  test_models.py  test_postprocessing.py
utils/: __init__.py  dataset.py  heatmap_funcs.py  helper_funcs.py  inference_video.py  metrics.py  video_processor.py
