[tool.poetry]
name = "keypoint-detection"
version = "0.1.0"
description = ""
authors = ["Ruben Mustad <mustadruben@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = "^3.10.3"
transformers = "^4.52.4"
datasets = "^3.6.0"
albumentations = ">=2.0.8"
numpy = "^2.3.0"
pytubefix = ">=8.13.1"
validators = ">=0.35.0"
opencv-python = ">=4.11.0.86"

torch = [
    { version = "^2.7.0", markers="sys_platform == 'win32'", source = "torch_cuda128" },
    { version = "^2.7.0", markers="sys_platform != 'win32'", source = "pypi" },
]

[[tool.poetry.source]]
name = "torch_cuda128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]